--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/preset-env": "^7.10.1"
   },
   "scripts": {
-    "dev": "babel ./conceitos/operacoesemarray.js -o ./bundle.js -w"
+    "dev": "babel ./conceitos/restspread.js -o ./bundle.js -w"
   }
 }
