--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "@babel/preset-env": "^7.10.1"
   },
   "scripts": {
-    "dev": "babel ./conceitos/restspread.js -o ./bundle.js -w"
+    "dev": "babel ./conceitos/classes.js -o ./bundle.js -w"
   }
 }
